# SharkSVM

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  NEWS  README
config/: SharkSVMConfig.h.in
doc/: Doxyfile.in  manual.ltx
doc/html/: index.copy  index.html
doc/html/css/: bootstrap.css  font.css  style.css
doc/html/img/: bg.jpg.org
src/: CMakeLists.txt  GlobalParameters.h  SharkSVM-predict.cpp  SharkSVM-train.cpp  SharkSVM.h
src/Algorithms/: CMakeLists.txt  CSvmTrainer.h  CascadeSvmTrainer.h  DCSVMTrainer.h  KMeans.h  KMedoids.cpp  KMedoids.h  KernelCPATrainer.h  KernelDCSVMTrainer.h  KernelS2GDTrainer.h  KernelSGDTrainer.h  KernelSVRGTrainer.h  KernelSVRGTrainer.h.copy  NystromTrainer.h
src/Algorithms/Budgeted/: AbstractBudgetMaintenanceStrategy.h  BudgetMaintenanceStrategyFactory.h  KernelBudgetedSGDTrainer.h  MergeBudgetMaintenanceStrategy.h  ProjectBudgetMaintenanceStrategy.h  RemoveBudgetMaintenanceStrategy.h
src/Data/: CMakeLists.txt  LabelOrder.h  SparseData.h
src/DataModels/: AbstractSVMDataModel.h  BudgetedSVMDataModel.cpp  BudgetedSVMDataModel.h  CMakeLists.txt  DataModelContainer.cpp  DataModelContainer.h  LLSVMDataModel.cpp  LLSVMDataModel.h  LibSVMDataModel.cpp  LibSVMDataModel.h  LocalSVMDataModel.cpp  LocalSVMDataModel.h  SVMDataModelFactory.cpp  SVMDataModelFactory.h  SVMLightDataModel.cpp  SVMLightDataModel.h
src/Helper/: CMakeLists.txt  CommandLineParameters.h  GeneralLearningMachine.h  ModelStatistics.cpp  ModelStatistics.h
src/LinAlg/: CMakeLists.txt  IncompleteCholeskyFactorization.h  LowRankApproximation.h  NystromFeatureTransform.h  NystromKernelApproximation.h  RandomFourierFeatures.h
src/Models/: CMakeLists.txt  ClusteredKernelClassifier.h  NystromClassifier.h
src/grave/: FeatureTransformedLinearClassifier.h  FeatureTransformedLinearTrainer.h
test/: AbstractBudgetMaintenanceStrategy_Test.cpp  AbstractSVMDataModel_Test.cpp  BudgetMaintenanceStrategyFactory_Test.cpp  CMakeLists.txt  CascadeSVMTrainer_Test.cpp  FeatureTransformation_Test.cpp  IncompleteCholeskyFactorization_Test.cpp  LabelOrder_Test.cpp  MergeBudgetMaintenanceStrategy_Test.cpp  NystromKernelApproximation_Test.cpp  RandomFourierFeatures_Test.cpp  RemoveBudgetMaintenanceStrategy_Test.cpp
test/data/models/: llsvm.model
tools/: clean.sh  convertToShark.pl  inject.sh  makeastyle.pl
tools/injectFiles/: Makefile
